style.css
@font-face {
    font-family: 'marlboro';
    src: url('fonts/marlboro.ttf') format('truetype');
}

@font-face {
    font-family: 'montague';
    src: url('fonts/montague.ttf') format('truetype');
}

.d-none {
    display: none !important
}

body {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-image: url('img/website_background/desert4.png');
    background-position: center;
    background-repeat: no-repeat;
    font-family: 'marlboro', Arial, Helvetica, sans-serif;
}

h1 {
    text-shadow: 4px 6px 8px rgba(0, 0, 0, 0.4);
    letter-spacing: 5px;
    font-size: 400%;
    user-select: none;
}

canvas {
    width: 100%;
    height: auto;
    display: block;
    background-color: black;
    border-radius: 8px;
    z-index: 1;
}

canvas#canvas {
    z-index: 1;
    position: relative;
}

#overlay-canvas-outro {
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 2;
    opacity: 0.8;
}

#overlay-canvas-start {
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 3;
}

canvas#canvas:fullscreen {
    width: 100vw;
    height: 100vh;
}

#start-button,
#replay-button {
    position: absolute;
    z-index: 3;
    font-size: 40px;
    padding: 10px 20px;
    cursor: pointer;
    user-select: none;
    background: linear-gradient(to top right, rgb(119, 81, 32), rgb(235, 94, 29));
    border-radius: 16px;
    border: unset;
    font-family: 'marlboro', Arial, Helvetica, sans-serif;
    font-weight: bold;
    color: black;
    transition: transform 0.3s ease, background 0.3s ease, box-shadow 0.3s ease;
}

#start-button:hover,
#replay-button:hover {
    background: linear-gradient(to top right, rgb(139, 101, 52), rgb(255, 114, 49));
    transform: translate(-50%, -50%) scale(1.10);
    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.2);
}

#start-button {
    top: 15%;
    left: 50%;
    transform: translate(-50%, -50%);
}

#replay-button {
    top: 85%;
    left: 50%;
    transform: translate(-50%, -50%);
}

#options-container {
    position: absolute;
    top: 10px;
    right: 20px;
    z-index: 3;
    display: flex;
    justify-content: flex-end;
    gap: 10px;
}

.options-button-style {
    background: rgb(221, 135, 96);
    border: none;
    border-radius: 8px;
    padding: 10px;
    cursor: pointer;
    user-select: none;
}

.options-button-style img {
    width: 28px;
    height: 28px;
}

.general-ingame-button-style {
    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
    transition: background-color 0.3s ease;
}

.general-ingame-button-style:hover {
    background-color: rgba(255, 255, 255, 1);
}

.control-container-style {
    position: absolute;
    bottom: 10px;
    width: 90%;
    display: flex;
    justify-content: space-between;
    padding: 0 15px;
    z-index: 3;
    left: 50%;
    transform: translateX(-50%);
}

.control-left-right-style {
    display: flex;
    gap: 60px;
}

.control-jump-throw-style {
    display: flex;
    gap: 30px;
}

.control-button-style {
    background: rgb(221, 135, 96);
    border: none;
    border-radius: 8px;
    padding: 8px;
    cursor: pointer;
    user-select: none;
    opacity: 0.7;
    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
    transition: background-color 0.3s ease;
}

.control-button-style img {
    width: 30px;
    height: 30px;
}

.control-button-style:hover {
    background-color: rgba(255, 255, 255, 1);
}

#sound-image {
    user-select: none;
}

#rotate-message {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background-color: rgba(0, 0, 0, 0.8);
    color: white;
    font-size: 24px;
    text-align: center;
    justify-content: center;
    align-items: center;
    z-index: 9999;
}

#button-left,
#button-right,
#button-jump,
#button-throw {
    touch-action: none;
}

canvas {
    touch-action: none;
}

#game-container {
    position: relative;
    width: 720;
    height: 480;
    max-width: 720px;
    max-height: 100vh;
    margin: 0 auto;
}

canvas {
    width: 100%;
    height: 100%;
}

.game-container {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
}

#helpOverlay {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 720;
    height: 480;
    background-color: rgba(218, 92, 29, 0.9);
    color: black;
    z-index: 9999;
    display: none;
    text-align: left;
    padding: 20px;
    border-radius: 10px;
}

.show-help #helpOverlay {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

#control-list {
    list-style-type: none;
}

#game-control-heading {
    font-size: 24px;
    font-weight: 700
}

#help-text-column {
    display: flex;
}

#help-close-button {
    background-color: transparent;
    border: none;
    cursor: pointer;
    transition: transform 0.2s ease, background-color 0.3s ease;
}

#help-close-button:hover {
    transform: scale(1.1);
    background-color: rgba(196, 115, 78, 0.1);
}

#help-close-button img {
    width: 24px;
    height: 24px;
    transition: opacity 0.3s ease;
    margin-bottom: 10px;
}

#help-close-button:hover img {
    opacity: 0.8;
}

#legal-notice-section {
    display: flex;
    justify-content: space-between;
    gap: 4px;
}

.footer-button-styling {

    font-size: 24px;
    padding: 10px 20px;
    cursor: pointer;
    user-select: none;
    background: linear-gradient(to top right, rgb(119, 81, 32), rgb(235, 94, 29));
    border-radius: 16px;
    border: unset;
    font-weight: bold;
    color: black;
    transition: transform 0.3s ease, background 0.3s ease, box-shadow 0.3s ease
}

.footer-button-styling:hover {
    background: linear-gradient(to top right, rgb(139, 101, 52), rgb(255, 114, 49));
    transform: scale(1.10);
    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.2);
}

a {
    text-decoration: none;
    color: black;
}

@media (max-width: 580px) {

    #start-button {
        top: 15%;
        left: 25%;
        transform: translate(-50%, -50%);
    }

    #replay-button {
        top: 80%;
        left: 50%;
        border-radius: 10px;
        font-size: 32px;
        padding: 5px 10px;
        transform: translate(-50%, -50%);
    }
}

@media (max-width: 410px) {

    #start-button {
        top: 15%;
        left: 30%;
        transform: translate(-50%, -50%);
    }

    .options-button-style img {
        width: 18px;
        height: 18px;
    }

    .options-button-style {

        border-radius: 6px;
        padding: 6px;
    }
}

@media only screen and (max-width: 720px) {
    canvas {
        width: 100%;
    }

    #overlay-canvas-outro,
    #overlay-canvas-start {
        width: 100%;
    }
}

@media only screen and (max-height: 480px) {
    canvas {
        width: 100vh;
    }

    #overlay-canvas-outro,
    #overlay-canvas-start {
        width: 100vh;
    }
}

